Added functionality to allow SEO meta headers

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "quoteProps": "as-needed"
+  "quoteProps": "as-needed",
+  "bracketSpacing": true
 }
